welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: type R
if (estSurMessage():R){
                    ^BDRBuggle:6: error: not found: type L
	if (estSurMessage():L){
                            ^