welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage():R){
droite();
avance();
}else{
	if (estSurMessage():L){
		gauche();
		avance();
	}else{
		
	}
	}


